[project]
name = "mcp-http-client"
version = "1.0.0"
description = "Async HTTP client for interacting with an MCP server using JSON-RPC"
authors = [{name = "Idea Bosque"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.0"
]

[project.urls]
Homepage = "https://github.com/ideabosque/mcp_http_client"
Repository = "https://github.com/ideabosque/mcp_http_client"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["mcp_http_client"]
