[project]
name = "mcp-http-client"
version = "0.0.1"
description = "Async HTTP client for interacting with an MCP server using JSON-RPC"
authors = [{name = "Idea Bosque"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.0"
]

[project.urls]
Homepage = "https://github.com/ideabosque/mcp_http_client"
Repository = "https://github.com/ideabosque/mcp_http_client"